<resources>
    <string name="app_name">To-Do List</string>

    <string name="button_sort">Sort by</string>
    <string name="button_settings">Settings</string>

    <string name="button_sort_default">Default</string>
    <string name="button_sort_name_asc">Name (Ascending)</string>
    <string name="button_sort_name_desc">Name (Descending)</string>
    <string name="button_sort_date_added">Date Added</string>

    <string name="text_title">Title</string>
    <string name="text_notes">Notes</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
</resources>
